Jump to internal anchors with enough whitespace above to clear the fixed positioned masthead.

--- a/_assets/stylesheets/_utilities.scss
+++ b/_assets/stylesheets/_utilities.scss
@@ -102,6 +102,15 @@ body:hover .visually-hidden button {
   list-style: none;
 }
 
+// Clear fixed positioned masthead
+*[id]:before {
+  display: block;
+  content: " ";
+  margin-top: -75px;
+  height: 75px;
+  visibility: hidden;
+}
+
 
 /*
    Type
